Removed unnecessary comments

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -1,97 +1,32 @@
-%
-% Niniejszy plik stanowi przykład formatowania pracy magisterskiej na
-% Wydziale MIM UW.  Szkielet użytych poleceń można wykorzystywać do
-% woli, np. formatujac wlasna prace.
-%
-% Zawartosc merytoryczna stanowi oryginalnosiagniecie
-% naukowosciowe Marcina Wolinskiego.  Wszelkie prawa zastrzeżone.
-%
-% Copyright (c) 2001 by Marcin Woliński <M.Wolinski@gust.org.pl>
-% Poprawki spowodowane zmianami przepisów - Marcin Szczuka, 1.10.2004
-% Poprawki spowodowane zmianami przepisow i ujednolicenie
-% - Seweryn Karłowicz, 05.05.2006
-% Dodanie wielu autorów i tłumaczenia na angielski - Kuba Pochrybniak, 29.11.2016
-
-% dodaj opcję [licencjacka] dla pracy licencjackiej
-% dodaj opcję [en] dla wersji angielskiej (mogą być obie: [licencjacka,en])
 \documentclass[licencjacka,en]{pracamgr}
 
-% Dane magistranta:
-% \autor{Imię Nazwisko}{231040}
-
-% Dane magistrantów:
 \autor{Tomasz Nowak}{429575}
 \autori{Michał Staniewski}{429598}
 \autorii{Mieszko Grodzicki}{429132}
 \autoriii{Bartosz Smolarczyk}{429594}
-%\autoriv{Autor nr Cztery}{432145}
-%\autorv{Autor nr Pięć}{342011}
-
-\title{Accelerating package expansion in Rust through development of a semantic versioning tool}
-\titlepl{Przyspieszenie rozwoju pakietów w języku Rust poprzez rozbudowę narzędzia do semantycznego wersjonowania}
-
-%\tytulang{An implementation of a difference blabalizer based on the theory of $\sigma$ -- $\rho$ phetors}
-
-%kierunek:
-% - matematyka, informacyka, ...
-% - Mathematics, Computer Science, ...
-\kierunek{Computer Science}
-
-% informatyka - nie okreslamy zakresu (opcja zakomentowana)
-% matematyka - zakres moze pozostac nieokreslony,
-% a jesli ma byc okreslony dla pracy mgr,
-% to przyjmuje jedna z wartosci:
-% {metod matematycznych w finansach}
-% {metod matematycznych w ubezpieczeniach}
-% {matematyki stosowanej}
-% {nauczania matematyki}
-% Dla pracy licencjackiej mamy natomiast
-% mozliwosc wpisania takiej wartosci zakresu:
-% {Jednoczesnych Studiow Ekonomiczno--Matematycznych}
-
-% \zakres{Tu wpisac, jesli trzeba, jedna z opcji podanych wyzej}
-
-% Praca wykonana pod kierunkiem:
-% (podać tytuł/stopień imię i nazwisko opiekuna
-% Instytut
-% ew. Wydział ew. Uczelnia (jeżeli nie MIM UW))
 \opiekun{mgr Michał Możdżonek\\
   Institute of Informatics\\
   }
-
-% miesiąc i~rok:
 \date{May 2023}
-
-%Podać dziedzinę wg klasyfikacji Socrates-Erasmus:
+\kierunek{Computer Science}
+% Wg klasyfikacji Socrates-Erasmus:
 \dziedzina{
-%11.0 Matematyka, Informatyka:\\
-%11.1 Matematyka\\
-%11.2 Statystyka\\
 11.3 Computer Science\\
-%11.4 Sztuczna inteligencja\\
-%11.5 Nauki aktuarialne\\
-%11.9 Inne nauki matematyczne i informatyczne
 }
-
-%Klasyfikacja tematyczna wedlug AMS (matematyka) lub ACM (informatyka)
+% Klasyfikacja tematyczna wedlug AMS (matematyka) lub ACM (informatyka)
 \klasyfikacja{
   D. Software\\
   D.2. Software Engineering\\
   D.2.4. Software/Program Verification
   }
 
-% Słowa kluczowe:
+\title{Accelerating package expansion in Rust through development of a semantic versioning tool}
+\titlepl{Przyspieszenie rozwoju pakietów w języku Rust poprzez rozbudowę narzędzia do semantycznego wersjonowania}
 \keywords{Rust, semantic versioning, continuous integration, package manager}
-
-% Tu jest dobre miejsce na Twoje własne makra i~środowiska:
-\newtheorem{defi}{Definicja}[section]
-
-% koniec definicji
 
 \begin{document}
 \maketitle
 
-% Tu jest abstrakt na stronę początkową
 \begin{abstract}
 In many programming languages there exist countless nuances,
 making developers accidentally release new versions of their packages
@@ -430,43 +365,6 @@ he was so excited that he wrote a comment with a tip in our PR>
 
 % \bibitem[Bea65]{beaman} Juliusz Beaman, \textit{Morbidity of the Jolly
 %     function}, Mathematica Absurdica, 117 (1965) 338--9.
-
-% \bibitem[Blar16]{eb1} Elizjusz Blarbarucki, \textit{O pewnych
-%     aspektach pewnych aspektów}, Astrolog Polski, Zeszyt 16, Warszawa
-%   1916.
-
-% \bibitem[Fif00]{ffgg} Filigran Fifak, Gizbert Gryzogrzechotalski,
-%   \textit{O blabalii fetorycznej}, Materiały Konferencji Euroblabal
-%   2000.
-
-% \bibitem[Fif01]{ff-sr} Filigran Fifak, \textit{O fetorach
-%     $\sigma$-$\rho$}, Acta Fetorica, 2001.
-
-% \bibitem[Głomb04]{grglo} Gryzybór Głombaski, \textit{Parazytonikacja
-%     blabiczna fetorów --- nowa teoria wszystkiego}, Warszawa 1904.
-
-% \bibitem[Hopp96]{hopp} Claude Hopper, \textit{On some $\Pi$-hedral
-%     surfaces in quasi-quasi space}, Omnius University Press, 1996.
-
-% \bibitem[Leuk00]{leuk} Lechoslav Leukocyt, \textit{Oval mappings ab ovo},
-%   Materiały Białostockiej Konferencji Hodowców Drobiu, 2000.
-
-% \bibitem[Rozk93]{JR} Josip A.~Rozkosza, \textit{O pewnych własnościach
-%     pewnych funkcji}, Północnopomorski Dziennik Matematyczny 63491
-%   (1993).
-
-% \bibitem[Spy59]{spyrpt} Mrowclaw Spyrpt, \textit{A matrix is a matrix
-%     is a matrix}, Mat. Zburp., 91 (1959) 28--35.
-
-% \bibitem[Sri64]{srinis} Rajagopalachari Sriniswamiramanathan,
-%   \textit{Some expansions on the Flausgloten Theorem on locally
-%     congested lutches}, J. Math.  Soc., North Bombay, 13 (1964) 72--6.
-
-% \bibitem[Whi25]{russell} Alfred N. Whitehead, Bertrand Russell,
-%   \textit{Principia Mathematica}, Cambridge University Press, 1925.
-
-% \bibitem[Zen69]{heu} Zenon Zenon, \textit{Użyteczne heurystyki
-%     w~blabalizie}, Młody Technik, nr~11, 1969.
 
 \end{thebibliography}
 
