--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -124,7 +124,7 @@ TODO:
 	\item compare it to Python's pip -- a lot of people know what it is
 	\item mention differences with pip -- e.g. yanking releases
 	\item mention that it follows semver and it is described in another section
-	\item define Manifest file and lockfile
+	\item define Manifest file
 	\item describe what happens during cargo update
 	\item define the registry and mention its site -- crates.io
 	\item describe how publishing packages work (e.g. how the CLI for it works)
@@ -277,6 +277,7 @@ TODO:
 	\item explain how the lints look like
 	\item mention that the project is split into three sub-projects,
 		in this order: cargo-semver-checks, trustfall-rustdoc-adapter, trustfall-rustdoc,
+		cargo-semver-checks-action,
 		and briefly define what they do (like in our docs)
 \end{itemize}
 
@@ -302,6 +303,13 @@ TODO:
 TODO:
 \begin{itemize}
 	\item describe the purpose of the adapter and what it does
+\end{itemize}
+
+\section{cargo-semver-checks-action}
+
+TODO:
+\begin{itemize}
+	\item describe the purpose of this subproject and what it does
 \end{itemize}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
