--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -52,7 +52,7 @@ without worrying about their app being broken by a dependency change.
 % omyłkowo publikują nowe wersje swoich pakietów bez zachowania kompatybilności wstecznej.
 % Takie publikacje mogą bezpośrednio wpłynąć na projekty korzystające z ich pakietów,
 % powodując błędy bądź nawet uniemożliwiając kompilację po aktualizacji do najnowszej wersji.
-% Jednym z dotkniętych tym problemem języków jest Rust, który również nie posiada wbudowanego
+% Jednym z języków dotkniętych tym problemem jest Rust, który również nie posiada wbudowanego
 % mechanizmu wymuszającego semantyczne wersjonowanie.
 
 % Celem tej pracy jest przedstawienie rozwoju narzędzia dla programistów w języku Rust, które
