--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -59,7 +59,7 @@ without worrying about their app being broken by a dependency change.
 % zmniejszaja szanse na publikację kodu nieprzestrzegającego zasad semantycznego wersjonowania.
 
 % Istnieją również plany, aby narzędzie stało się częścią standardowego toolchainu
-% deweloperskiego. Skutkowałoby to jego powszechnym użyciem i tym samym pomogło użytkownikom
+% deweloperskiego. Skutkowałoby to jego powszechnym użyciem i tym samym pomogłoby użytkownikom
 % pakietów bezpiecznie korzystać z poprawek błędów, łatek bezpieczeństwa oraz nowych
 % funkcjonalności bez obaw o zepsucie ich aplikacji przez zmiany w którymś z wykorzystanych
 % pakietów.
