--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -52,11 +52,11 @@ without worrying about their app being broken by a dependency change.
 % omyłkowo publikują nowe wersje swoich pakietów bez zachowania kompatybilności wstecznej.
 % Takie publikacje mogą bezpośrednio wpłynąć na projekty korzystające z ich pakietów,
 % powodując błędy bądź nawet uniemożliwiając kompilację po aktualizacji do najnowszej wersji.
-% Jednym z języków dotkniętych tym problemem jest Rust, który również nie posiada wbudowanego
+% Jednym z języków dotkniętych tym problemem jest Rust, który nie posiada wbudowanego
 % mechanizmu wymuszającego semantyczne wersjonowanie.
 
-% Celem tej pracy jest przedstawienie rozwoju narzędzia dla programistów w języku Rust, które
-% zmniejszaja szanse na publikację kodu nieprzestrzegającego zasad semantycznego wersjonowania.
+% Celem tej pracy jest przedstawienie rozwoju narzędzia dla języka Rust, które
+% zmniejsza ryzyko publikacji kodu nieprzestrzegającego zasad semantycznego wersjonowania.
 
 % Istnieją również plany, aby narzędzie stało się częścią standardowego toolchainu
 % deweloperskiego. Skutkowałoby to jego powszechnym użyciem i tym samym pomogłoby użytkownikom
