--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -58,7 +58,7 @@ without worrying about their app being broken by a dependency change.
 % Celem tej pracy jest przedstawienie rozwoju narzędzia dla języka Rust, które
 % zmniejsza ryzyko publikacji kodu nieprzestrzegającego zasad semantycznego wersjonowania.
 
-% Istnieją również plany, aby narzędzie stało się częścią standardowego toolchainu
+% Istnieją również plany, aby to narzędzie stało się częścią standardowego toolchainu
 % deweloperskiego. Skutkowałoby to jego powszechnym użyciem i tym samym pomogłoby użytkownikom
 % pakietów bezpiecznie korzystać z poprawek błędów, łatek bezpieczeństwa oraz nowych
 % funkcjonalności bez obaw o zepsucie ich aplikacji przez zmiany w którymś z wykorzystywanych
