--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -48,7 +48,7 @@ without worrying about their app being broken by a dependency change.
 \end{abstract}
 
 % Abstrakt po polsku (potrzebny tylko w APD?)
-% W wielu językach programowania istnieją niezliczone niuanse sprawiające, że deweloperzy
+% W wielu językach programowania istnieją liczne niuanse sprawiające, że deweloperzy
 % omyłkowo publikują nowe wersje swoich pakietów bez zachowania kompatybilności wstecznej.
 % Takie publikacje mogą bezpośrednio wpłynąć na projekty korzystające z ich pakietów,
 % powodując błędy bądź nawet uniemożliwiając kompilację po aktualizacji do najnowszej wersji.
