Fix that sentence

--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -59,10 +59,9 @@ without worrying about their app being broken by a dependency change.
 % zmniejsza ryzyko publikacji kodu nieprzestrzegającego zasad semantycznego wersjonowania.
 
 % Są również plany, aby to narzędzie stało się częścią standardowego toolchainu
-% deweloperskiego. Skutkowałoby to jego powszechnym użyciem i tym samym pomogłoby użytkownikom
-% pakietów bezpiecznie korzystać z poprawek błędów, łatek bezpieczeństwa oraz nowych
-% funkcjonalności bez obaw o zepsucie ich aplikacji przez zmiany w którymś z wykorzystywanych
-% pakietów.
+% deweloperskiego. Skutkowałoby to jego powszechnym użyciem i tym samym zagwarantowałoby
+% użytkownikom, że korzystanie z poprawek błędów, łatek bezpieczeństwa oraz nowych
+% funkcjonalności pakietów nie doprowadzi do awarii ich aplikacji.
 
 \tableofcontents
 %\listoffigures
