--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -58,7 +58,7 @@ without worrying about their app being broken by a dependency change.
 % Celem tej pracy jest przedstawienie rozwoju narzędzia dla języka Rust, które
 % zmniejsza ryzyko publikacji kodu nieprzestrzegającego zasad semantycznego wersjonowania.
 
-% Są również plany, aby to narzędzie stało się częścią standardowego toolchainu
+% Są również plany, aby narzędzie to stało się częścią standardowego toolchainu
 % deweloperskiego. Skutkowałoby to jego powszechnym użyciem i tym samym zagwarantowałoby
 % użytkownikom, że korzystanie z poprawek błędów, łatek bezpieczeństwa oraz nowych
 % funkcjonalności pakietów nie doprowadzi do awarii ich aplikacji.
