--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -50,7 +50,7 @@ without worrying about their app being broken by a dependency change.
 % Abstrakt po polsku (potrzebny tylko w APD?)
 % W wielu językach programowania istnieją liczne niuanse sprawiające, że deweloperzy
 % omyłkowo publikują nowe wersje swoich pakietów bez zachowania kompatybilności wstecznej.
-% Takie upublicznienia mogą bezpośrednio wpłynąć na projekty korzystające z ich pakietów,
+% Takie sytuacje mogą bezpośrednio wpłynąć na projekty korzystające z ich pakietów,
 % powodując błędy bądź nawet uniemożliwiając kompilację po aktualizacji do najnowszej wersji.
 % Jednym z języków dotkniętych tym problemem jest Rust, który nie posiada wbudowanego
 % mechanizmu wymuszającego semantyczne wersjonowanie.
