--- a/thesis-en.tex
+++ b/thesis-en.tex
@@ -47,6 +47,22 @@ security patches and new functionality,
 without worrying about their app being broken by a dependency change.
 \end{abstract}
 
+% Abstrakt po polsku (potrzebny tylko w APD?)
+% W wielu językach programowania istnieją liczne niuanse sprawiające, że deweloperzy
+% omyłkowo publikują nowe wersje swoich pakietów bez zachowania kompatybilności wstecznej.
+% Takie sytuacje mogą bezpośrednio wpłynąć na projekty korzystające z ich pakietów,
+% powodując błędy bądź nawet uniemożliwiając kompilację po aktualizacji do najnowszej wersji.
+% Jednym z języków dotkniętych tym problemem jest Rust, który nie posiada wbudowanego
+% mechanizmu wymuszającego semantyczne wersjonowanie.
+
+% Celem tej pracy jest przedstawienie rozwoju narzędzia dla języka Rust, które
+% zmniejsza ryzyko publikacji kodu nieprzestrzegającego zasad semantycznego wersjonowania.
+
+% Są również plany, aby narzędzie to stało się częścią standardowego toolchainu
+% deweloperskiego. Skutkowałoby to jego powszechnym użyciem i tym samym zagwarantowałoby
+% użytkownikom, że korzystanie z poprawek błędów, łatek bezpieczeństwa oraz nowych
+% funkcjonalności pakietów nie doprowadzi do awarii ich aplikacji.
+
 \tableofcontents
 %\listoffigures
 %\listoftables
@@ -180,7 +196,7 @@ TODO:
 	\item write about cases users reported in the github issue
 	\item mention the paper describing that 43\% of yanked releases
 		are because of semver breaks and 3.7\% of all >300'000 releases are yanked
-	\item mention that we've developed 
+	\item mention that we've developed
 		a script that scans all releases for the semver breaks
 		we can detect and the results are presented in some chapter
 \end{itemize}
